mobile menu overflow fix v2, html elements fixes

--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -53,6 +53,11 @@
       gap: 24px;
     }
 
+    @include m.vp-767 {
+      align-items: flex-start;
+      flex-direction: column;
+    }
+
     &__list {
       gap: 33px;
       padding-top: 0;
